plugins/kotlin/idea/tests/testData/multiplatform/diamondActualOnOnePath/right/right.kt
package sample

actual class <!LINE_MARKER("descr='Has expects in top module'")!>ActualizedInRight<!>
